--- a/angular/package.json
+++ b/angular/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-prod": "ng build --configuration production --base-href /angular/free/",
+    "build-prod": "ng build --configuration production --base-href /demos/admin-templates/gradient-able/angular/free/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
