--- a/.github/workflows/prod-bootstrap.yml
+++ b/.github/workflows/prod-bootstrap.yml
@@ -1,40 +1,49 @@
-name: Node - SSH deploy
+name: Bootstrap deploy
 
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
+    paths:
+      - 'bootstrap/**'
+  #pull_request:
+  #  types:
+  #    - closed
+  #  branches:
+  #    - master
 
 jobs:
-  sftp-deploy:
-    name: 🎉 Deploy
+  #if_merged:
+  #  if: github.event.pull_request.merged == true
+  Bootstrap-Deploy:
+    name: 🎉 Bootstrap Deploy
     runs-on: ubuntu-latest
 
     steps:
       - name: 🚚 Get latest code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
-      - name: Install Node.js 14
-        uses: actions/setup-node@v1
+      - name: Install Node.js 18
+        uses: actions/setup-node@v3
         with:
-          node-version: "14.x"
+          node-version: "18.x"
 
       - name: 🔨 Build Project
         run: |
-          yarn    
+          cd bootstrap
+          npm install  
           gulp build-prod
 
       - name: 📂 Deploy to Server
-        uses: easingthemes/ssh-deploy@v2.1.5
+        uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           # ARGS: "-rltgoDzvO --delete"
-          SOURCE: "dist/"
+          SOURCE: "bootstrap/dist/"
           REMOTE_HOST: 217.21.92.35
           REMOTE_USER: u778408432
           REMOTE_PORT: "65002"
           TARGET: domains/codedthemes.com/public_html/demos/admin-templates/gradient-able/bootstrap/free
-          EXCLUDE: "/node_modules/"
+          EXCLUDE: "/bootstrap/node_modules/"
