fix cicd and readme updates

--- a/.github/workflows/prod-angular.yml
+++ b/.github/workflows/prod-angular.yml
@@ -33,7 +33,7 @@ jobs:
       - name: 🔨 Build Project
         run: |
           cd angular
-          npm install 
+          npm install --legacy-peer-deps
           npm run build-prod
 
       - name: 📂 Deploy to Server
