--- a/angular/angular.json
+++ b/angular/angular.json
@@ -76,10 +76,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "skeleton:build:production"
+              "buildTarget": "skeleton:build:production"
             },
             "development": {
-              "browserTarget": "skeleton:build:development"
+              "buildTarget": "skeleton:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -87,7 +87,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "skeleton:build"
+            "buildTarget": "skeleton:build"
           }
         },
         "test": {
