--- a/.github/workflows/prod-react.yml
+++ b/.github/workflows/prod-react.yml
@@ -1,48 +1,49 @@
-# name: Node - Prod deploy
+name: Angular deploy
 
-# # Controls when the action will run.
-# on:
-#   # Triggers the workflow on push or pull request events but only for the master branch
-#   push:
-#     branches:
-#       - master
-#     paths:
-#       - 'react/**'
-#   #pull_request:
-#   #  types:
-#   #    - closed
-#   #  branches:
-#   #    - master
+# Controls when the action will run.
+on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches:
+      - main
+    paths:
+      - 'react/**'
+  #pull_request:
+  #  types:
+  #    - closed
+  #  branches:
+  #    - master
 
-# jobs:
-#   #if_merged:
-#   #  if: github.event.pull_request.merged == true
-#   React-Deploy:
-#     name: 🎉 React Deploy
-#     runs-on: ubuntu-latest
+jobs:
+  #if_merged:
+  #  if: github.event.pull_request.merged == true
+  React-Deploy:
+    name: 🎉 React Deploy
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: 🚚 Get latest code
-#         uses: actions/checkout@v3
+    steps:
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v3
 
-#       - name: Install Node.js 18
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: "18.x"
+      - name: Install Node.js 18
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.x"
 
-#       - name: 🔨 Build Project
-#         run: |
-#           cd react
-#           npm install --legacy-peer-deps 
-#           npm run build
+      - name: 🔨 Build Project
+        run: |
+          cd react
+          yarn
+          yarn run build
 
-#       - name: 📂 Deploy to Server
-#         uses: easingthemes/ssh-deploy@main
-#         env:
-#           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-#           # ARGS: "-rltgoDzvO --delete"
-#           SOURCE: "react/build/"
-#           REMOTE_HOST: 192.34.62.123
-#           REMOTE_USER: ableproadmin
-#           TARGET: public_html/react/free
-#           EXCLUDE: "/react/node_modules/"
+      - name: 📂 Deploy to Server
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          # ARGS: "-rltgoDzvO --delete"
+          SOURCE: "react/build/"
+          REMOTE_HOST: 217.21.92.35
+          REMOTE_USER: u778408432
+          REMOTE_PORT: "65002"
+          TARGET: domains/codedthemes.com/public_html/demos/admin-templates/gradient-able/react/free
+          EXCLUDE: "/react/node_modules/"
