pr review change done

--- a/react/.env
+++ b/react/.env
@@ -1,6 +1,6 @@
-VITE_APP_VERSION = v18.1.0
+VITE_APP_VERSION = v5.0.0
 GENERATE_SOURCEMAP = false
 
 ## Public URL
-PUBLIC_URL=
-VITE_APP_BASE_NAME=
+PUBLIC_URL= https://codedthemes.com/demos/admin-templates/gradient-able/react/free
+VITE_APP_BASE_NAME= demos/admin-templates/gradient-able/react/free
