--- a/react/package.json
+++ b/react/package.json
@@ -1,11 +1,10 @@
 {
   "name": "gradient-able-free-react-admin-template",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "scripts": {
     "start": "vite",
-    "build": "vite build",
+    "build": "node --max-old-space-size=4096 node_modules/vite/bin/vite.js build",
     "preview": "vite preview",
-    "build-stage": "env-cmd -f .env.qa vite build",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
@@ -18,7 +17,6 @@
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
-    "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "^2.10.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
