--- a/.github/workflows/prod-react.yml
+++ b/.github/workflows/prod-react.yml
@@ -23,12 +23,12 @@ jobs:
 
     steps:
       - name: 🚚 Get latest code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Install Node.js 18
-        uses: actions/setup-node@v3
+      - name: Install Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: "18.x"
+          node-version: "20.x"
 
       - name: 🔨 Build Project
         run: |
@@ -41,7 +41,7 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           # ARGS: "-rltgoDzvO --delete"
-          SOURCE: "react/build/"
+          SOURCE: "react/dist/"
           REMOTE_HOST: 217.21.92.35
           REMOTE_USER: u778408432
           REMOTE_PORT: "65002"
