--- a/angular/package.json
+++ b/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gradient-able-free-angular-admin-template",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "author": "CodedThemes",
   "scripts": {
     "ng": "ng",
@@ -14,54 +14,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0-next.3",
-    "@angular/cdk": "^18.0.0-next.3",
-    "@angular/common": "^18.0.0-next.3",
-    "@angular/compiler": "^18.0.0-next.3",
-    "@angular/core": "^18.0.0-next.3",
-    "@angular/forms": "^18.0.0-next.3",
-    "@angular/localize": "^18.0.0-next.3",
-    "@angular/platform-browser": "^18.0.0-next.3",
-    "@angular/platform-browser-dynamic": "^18.0.0-next.3",
-    "@angular/router": "^18.0.0-next.3",
-    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@angular/animations": "^18.0.5",
+    "@angular/cdk": "^18.0.5",
+    "@angular/common": "^18.0.5",
+    "@angular/compiler": "^18.0.5",
+    "@angular/core": "^18.0.5",
+    "@angular/forms": "^18.0.5",
+    "@angular/localize": "^18.0.5",
+    "@angular/platform-browser": "^18.0.5",
+    "@angular/platform-browser-dynamic": "^18.0.5",
+    "@angular/router": "^18.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
     "@popperjs/core": "^2.11.8",
-    "apexcharts": "^3.49.0",
+    "apexcharts": "^3.49.2",
     "bootstrap": "^5.3.3",
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "mousetrap": "^1.6.5",
-    "ng-apexcharts": "^1.10.0",
+    "ng-apexcharts": "^1.11.0",
     "ngx-color-picker": "^16.0.0",
-    "ngx-scrollbar": "^13.0.3",
+    "ngx-scrollbar": "^15.0.1",
     "rxjs": "~7.8.1",
-    "tslib": "^2.6.2",
-    "zone.js": "~0.14.4"
+    "tslib": "^2.6.3",
+    "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.0-next.3",
-    "@angular-eslint/builder": "17.3.0",
-    "@angular-eslint/eslint-plugin": "17.3.0",
-    "@angular-eslint/eslint-plugin-template": "17.3.0",
-    "@angular-eslint/schematics": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
-    "@angular/cli": "18.0.0-next.3",
-    "@angular/compiler-cli": "^18.0.0-next.3",
+    "@angular-devkit/build-angular": "^18.0.6",
+    "@angular-eslint/builder": "18.0.1",
+    "@angular-eslint/eslint-plugin": "18.0.1",
+    "@angular-eslint/eslint-plugin-template": "18.0.1",
+    "@angular-eslint/schematics": "18.0.1",
+    "@angular-eslint/template-parser": "18.0.1",
+    "@angular/cli": "18.0.6",
+    "@angular/compiler-cli": "^18.0.5",
     "@types/jasmine": "~5.1.4",
-    "@types/lodash": "^4.17.0",
-    "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "7.7.1",
-    "@typescript-eslint/parser": "7.7.1",
-    "eslint": "^9.1.1",
+    "@types/lodash": "^4.17.5",
+    "@types/node": "^20.14.9",
+    "@typescript-eslint/eslint-plugin": "7.14.1",
+    "@typescript-eslint/parser": "7.14.1",
+    "eslint": "^9.5.0",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "3.2.5",
+    "prettier": "3.3.2",
     "typescript": "5.4"
   }
 }
