--- a/.github/workflows/prod-angular.yml
+++ b/.github/workflows/prod-angular.yml
@@ -25,16 +25,16 @@ jobs:
       - name: 🚚 Get latest code
         uses: actions/checkout@v3
 
-      - name: Install Node.js 18
+      - name: Install Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: "18.x"
+          node-version: "20.x"
 
       - name: 🔨 Build Project
         run: |
           cd angular
-          npm install --legacy-peer-deps
-          npm run build-prod
+          yarn
+          yarn build-prod
 
       - name: 📂 Deploy to Server
         uses: easingthemes/ssh-deploy@main
