--- a/angular/package.json
+++ b/angular/package.json
@@ -50,6 +50,8 @@
     "@angular-eslint/template-parser": "19.0.2",
     "@angular/cli": "19.0.6",
     "@angular/compiler-cli": "19.0.5",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
     "@types/jasmine": "~5.1.5",
     "@types/lodash": "4.17.13",
     "@types/node": "22.10.2",
