--- a/angular/package.json
+++ b/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gradient-able-free-angular-admin-template",
-  "version": "4.1.0",
+  "version": "5.0.0",
   "author": "CodedThemes",
   "scripts": {
     "ng": "ng",
@@ -10,58 +10,61 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "lint-fix": "ng lint --fix"
+    "lint:fix": "ng lint --fix",
+    "prettier": "prettier --write src/"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.5",
-    "@angular/cdk": "^18.0.5",
-    "@angular/common": "^18.0.5",
-    "@angular/compiler": "^18.0.5",
-    "@angular/core": "^18.0.5",
-    "@angular/forms": "^18.0.5",
-    "@angular/localize": "^18.0.5",
-    "@angular/platform-browser": "^18.0.5",
-    "@angular/platform-browser-dynamic": "^18.0.5",
-    "@angular/router": "^18.0.5",
-    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
-    "@popperjs/core": "^2.11.8",
-    "apexcharts": "^3.49.2",
-    "bootstrap": "^5.3.3",
-    "hammerjs": "^2.0.8",
-    "jquery": "^3.7.1",
-    "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
-    "mousetrap": "^1.6.5",
-    "ng-apexcharts": "^1.11.0",
-    "ngx-color-picker": "^16.0.0",
-    "ngx-scrollbar": "^15.0.1",
+    "@angular/animations": "19.0.5",
+    "@angular/cdk": "19.0.4",
+    "@angular/common": "19.0.5",
+    "@angular/compiler": "19.0.5",
+    "@angular/core": "19.0.5",
+    "@angular/forms": "19.0.5",
+    "@angular/localize": "19.0.5",
+    "@angular/platform-browser": "19.0.5",
+    "@angular/platform-browser-dynamic": "19.0.5",
+    "@angular/router": "19.0.5",
+    "@ng-bootstrap/ng-bootstrap": "18.0.0",
+    "@popperjs/core": "2.11.8",
+    "apexcharts": "3.49.2",
+    "bootstrap": "5.3.3",
+    "hammerjs": "2.0.8",
+    "jquery": "3.7.1",
+    "lodash": "4.17.21",
+    "lodash-es": "4.17.21",
+    "mousetrap": "1.6.5",
+    "ng-apexcharts": "1.11.0",
+    "ngx-color-picker": "17.0.0",
+    "ngx-scrollbar": "16.1.1",
     "rxjs": "~7.8.1",
-    "tslib": "^2.6.3",
-    "zone.js": "~0.14.7"
+    "tslib": "2.8.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.6",
-    "@angular-eslint/builder": "18.0.1",
-    "@angular-eslint/eslint-plugin": "18.0.1",
-    "@angular-eslint/eslint-plugin-template": "18.0.1",
-    "@angular-eslint/schematics": "18.0.1",
-    "@angular-eslint/template-parser": "18.0.1",
-    "@angular/cli": "18.0.6",
-    "@angular/compiler-cli": "^18.0.5",
-    "@types/jasmine": "~5.1.4",
-    "@types/lodash": "^4.17.5",
-    "@types/node": "^20.14.9",
-    "@typescript-eslint/eslint-plugin": "7.14.1",
-    "@typescript-eslint/parser": "7.14.1",
-    "eslint": "^9.5.0",
-    "jasmine-core": "~5.1.2",
-    "karma": "~6.4.3",
+    "@angular-devkit/build-angular": "19.0.6",
+    "@angular-eslint/builder": "19.0.2",
+    "@angular-eslint/eslint-plugin": "19.0.2",
+    "@angular-eslint/eslint-plugin-template": "19.0.2",
+    "@angular-eslint/schematics": "19.0.2",
+    "@angular-eslint/template-parser": "19.0.2",
+    "@angular/cli": "19.0.6",
+    "@angular/compiler-cli": "19.0.5",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
+    "@types/jasmine": "~5.1.5",
+    "@types/lodash": "4.17.13",
+    "@types/node": "22.10.2",
+    "@typescript-eslint/eslint-plugin": "8.18.1",
+    "@typescript-eslint/parser": "8.18.1",
+    "eslint": "9.17.0",
+    "jasmine-core": "~5.5.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "3.3.2",
-    "typescript": "5.4"
+    "prettier": "3.4.2",
+    "typescript": "5.6.3"
   }
 }
