--- a/angular/package.json
+++ b/angular/package.json
@@ -31,7 +31,6 @@
     "bootstrap": "5.3.3",
     "hammerjs": "2.0.8",
     "jquery": "3.7.1",
-    "lodash": "4.17.21",
     "lodash-es": "4.17.21",
     "mousetrap": "1.6.5",
     "ng-apexcharts": "1.11.0",
@@ -54,6 +53,7 @@
     "@eslint/js": "^9.17.0",
     "@types/jasmine": "~5.1.5",
     "@types/lodash": "4.17.13",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "22.10.2",
     "@typescript-eslint/eslint-plugin": "8.18.1",
     "@typescript-eslint/parser": "8.18.1",
