--- a/angular/package.json
+++ b/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gradient-able-free-angular-admin-template",
-  "version": "5.2.0",
+  "version": "5.3.0",
   "author": "CodedThemes",
   "scripts": {
     "ng": "ng",
@@ -15,56 +15,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.0.5",
-    "@angular/cdk": "19.0.4",
-    "@angular/common": "19.0.5",
-    "@angular/compiler": "19.0.5",
-    "@angular/core": "19.0.5",
-    "@angular/forms": "19.0.5",
-    "@angular/localize": "19.0.5",
-    "@angular/platform-browser": "19.0.5",
-    "@angular/platform-browser-dynamic": "19.0.5",
-    "@angular/router": "19.0.5",
+    "@angular/animations": "20.0.0-next.8",
+    "@angular/cdk": "19.2.17",
+    "@angular/common": "20.0.0-next.8",
+    "@angular/compiler": "20.0.0-next.8",
+    "@angular/core": "20.0.0-next.8",
+    "@angular/forms": "20.0.0-next.8",
+    "@angular/localize": "20.0.0-next.8",
+    "@angular/platform-browser": "20.0.0-next.8",
+    "@angular/platform-browser-dynamic": "20.0.0-next.8",
+    "@angular/router": "20.0.0-next.8",
     "@ng-bootstrap/ng-bootstrap": "18.0.0",
     "@popperjs/core": "2.11.8",
-    "apexcharts": "3.49.2",
-    "bootstrap": "5.3.3",
+    "apexcharts": "4.7.0",
+    "bootstrap": "5.3.6",
     "hammerjs": "2.0.8",
     "jquery": "3.7.1",
     "lodash-es": "4.17.21",
     "mousetrap": "1.6.5",
-    "ng-apexcharts": "1.11.0",
-    "ngx-color-picker": "17.0.0",
-    "ngx-scrollbar": "16.1.1",
-    "rxjs": "~7.8.1",
+    "ng-apexcharts": "1.15.0",
+    "ngx-scrollbar": "18.0.0",
+    "rxjs": "~7.8.2",
     "tslib": "2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.0.6",
-    "@angular-eslint/builder": "19.0.2",
-    "@angular-eslint/eslint-plugin": "19.0.2",
-    "@angular-eslint/eslint-plugin-template": "19.0.2",
-    "@angular-eslint/schematics": "19.0.2",
-    "@angular-eslint/template-parser": "19.0.2",
-    "@angular/cli": "19.0.6",
-    "@angular/compiler-cli": "19.0.5",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.17.0",
-    "@types/jasmine": "~5.1.5",
-    "@types/lodash": "4.17.13",
+    "@angular-devkit/build-angular": "20.0.0-next.8",
+    "@angular-eslint/builder": "19.4.0",
+    "@angular-eslint/eslint-plugin": "19.4.0",
+    "@angular-eslint/eslint-plugin-template": "19.4.0",
+    "@angular-eslint/schematics": "19.4.0",
+    "@angular-eslint/template-parser": "19.4.0",
+    "@angular/cli": "20.0.0-next.8",
+    "@angular/compiler-cli": "20.0.0-next.8",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.27.0",
+    "@types/jasmine": "~5.1.8",
+    "@types/lodash": "4.17.17",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "22.10.2",
-    "@typescript-eslint/eslint-plugin": "8.18.1",
-    "@typescript-eslint/parser": "8.18.1",
-    "eslint": "9.17.0",
-    "jasmine-core": "~5.5.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.1",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "3.4.2",
-    "typescript": "5.6.3"
+    "@types/node": "22.15.21",
+    "@typescript-eslint/eslint-plugin": "8.32.1",
+    "@typescript-eslint/parser": "8.32.1",
+    "eslint": "9.27.0",
+    "prettier": "3.5.3",
+    "typescript": "5.8.3"
   }
 }
