--- a/.github/workflows/prod-bootstrap.yml
+++ b/.github/workflows/prod-bootstrap.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
     paths:
-      - 'bootstrap/**'
+      - "bootstrap/**"
   #pull_request:
   #  types:
   #    - closed
@@ -23,7 +23,7 @@ jobs:
 
     steps:
       - name: 🚚 Get latest code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: 📂 Deploy to Server
         uses: easingthemes/ssh-deploy@main
@@ -31,7 +31,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           # ARGS: "-rltgoDzvO --delete"
           SOURCE: "bootstrap/dist/"
-          REMOTE_HOST: 91.108.116.107
+          REMOTE_HOST: 82.29.156.38
           REMOTE_USER: u106957989
           REMOTE_PORT: "65002"
           TARGET: domains/codedthemes.com/public_html/demos/admin-templates/gradient-able/bootstrap/free
