--- a/angular/.prettierrc
+++ b/angular/.prettierrc
@@ -6,5 +6,6 @@
   "tabWidth": 2,
   "useTabs": false,
   "htmlWhitespaceSensitivity": "ignore",
-  "bracketSameLine": false
+  "bracketSameLine": false,
+  "endOfLine": "lf"
 }
