--- a/angular/package.json
+++ b/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gradient-able-free-angular-admin-template",
-  "version": "5.3.0",
+  "version": "5.4.0",
   "author": "CodedThemes",
   "scripts": {
     "ng": "ng",
@@ -15,49 +15,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "20.0.0-next.8",
-    "@angular/cdk": "19.2.17",
-    "@angular/common": "20.0.0-next.8",
-    "@angular/compiler": "20.0.0-next.8",
-    "@angular/core": "20.0.0-next.8",
-    "@angular/forms": "20.0.0-next.8",
-    "@angular/localize": "20.0.0-next.8",
-    "@angular/platform-browser": "20.0.0-next.8",
-    "@angular/platform-browser-dynamic": "20.0.0-next.8",
-    "@angular/router": "20.0.0-next.8",
-    "@ng-bootstrap/ng-bootstrap": "18.0.0",
+    "@angular/animations": "20.0.5",
+    "@angular/cdk": "20.0.4",
+    "@angular/common": "20.0.5",
+    "@angular/compiler": "20.0.5",
+    "@angular/core": "20.0.5",
+    "@angular/forms": "20.0.5",
+    "@angular/localize": "20.0.5",
+    "@angular/platform-browser": "20.0.5",
+    "@angular/platform-browser-dynamic": "20.0.5",
+    "@angular/router": "20.0.5",
+    "@ng-bootstrap/ng-bootstrap": "19.0.0",
     "@popperjs/core": "2.11.8",
     "apexcharts": "4.7.0",
-    "bootstrap": "5.3.6",
+    "bootstrap": "5.3.7",
     "hammerjs": "2.0.8",
     "jquery": "3.7.1",
     "lodash-es": "4.17.21",
     "mousetrap": "1.6.5",
-    "ng-apexcharts": "1.15.0",
+    "ng-apexcharts": "1.16.0",
     "ngx-scrollbar": "18.0.0",
-    "rxjs": "~7.8.2",
+    "rxjs": "7.8.2",
     "tslib": "2.8.1",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "20.0.0-next.8",
-    "@angular-eslint/builder": "19.4.0",
-    "@angular-eslint/eslint-plugin": "19.4.0",
-    "@angular-eslint/eslint-plugin-template": "19.4.0",
-    "@angular-eslint/schematics": "19.4.0",
-    "@angular-eslint/template-parser": "19.4.0",
-    "@angular/cli": "20.0.0-next.8",
-    "@angular/compiler-cli": "20.0.0-next.8",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.27.0",
-    "@types/jasmine": "~5.1.8",
-    "@types/lodash": "4.17.17",
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "22.15.21",
-    "@typescript-eslint/eslint-plugin": "8.32.1",
-    "@typescript-eslint/parser": "8.32.1",
-    "eslint": "9.27.0",
-    "prettier": "3.5.3",
+    "@angular-devkit/build-angular": "20.0.4",
+    "@angular-eslint/builder": "20.1.1",
+    "@angular-eslint/eslint-plugin": "20.1.1",
+    "@angular-eslint/eslint-plugin-template": "20.1.1",
+    "@angular-eslint/schematics": "20.1.1",
+    "@angular-eslint/template-parser": "20.1.1",
+    "@angular/cli": "20.0.4",
+    "@angular/compiler-cli": "20.0.5",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "^9.29.0",
+    "@types/lodash-es": "4.17.12",
+    "@types/node": "24.0.4",
+    "@typescript-eslint/eslint-plugin": "8.35.0",
+    "@typescript-eslint/parser": "8.35.0",
+    "eslint": "9.29.0",
+    "prettier": "3.6.1",
     "typescript": "5.8.3"
   }
 }
